[package]
name = "kastenzettel"
version = "0.1.0"
authors = ["Pang Tun Jiang <mail@pangt.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
regex = "1.3.9"
